tests/snapshots/examples_fixtures/strict_types__type_class_compose.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_compose.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
