tests/snapshots/examples_fixtures/strict_types__type_class_default_method.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_default_method.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
