tests/snapshots/examples_fixtures/strict_types__type_class_deriving.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_deriving.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
