tests/snapshots/examples_fixtures/strict_types__type_class_dict_concrete.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_dict_concrete.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
