tests/snapshots/examples_fixtures/strict_types__type_class_multi_instance.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_multi_instance.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
